--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "build:uglify": "uglifyjs dist/lib/css-vars-docs.cjs -o dist/lib/css-vars-docs.cjs --mangle --compress && uglifyjs dist/lib/cli.cjs -o dist/lib/cli.cjs --mangle --compress && uglifyjs dist/lib/postcss.cjs -o dist/lib/postcss.cjs --mangle --compress",
         "test": "jest",
         "format": "prettier --write .",
-        "lint": "prettier --check ."
+        "format:check": "prettier --check .",
+        "lint": "eslint ."
     },
     "dependencies": {
         "commander": "12.1.0",
@@ -33,9 +34,13 @@
     "devDependencies": {
         "chokidar-cli": "3.0.0",
         "copyfiles": "2.4.1",
+        "eslint": "9.14.0",
+        "eslint-config-prettier": "9.1.0",
+        "eslint-plugin-prettier": "5.2.1",
         "jest": "29.7.0",
         "prettier": "3.3.3",
         "rimraf": "6.0.1",
+        "semantic-release": "24.2.0",
         "uglify-js": "3.19.3"
     },
     "keywords": [
