--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "postcss": "8.4.49"
     },
     "devDependencies": {
+        "@semantic-release/changelog": "6.0.3",
         "chokidar-cli": "3.0.0",
         "copyfiles": "2.4.1",
         "eslint": "9.14.0",
