--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "files": [
         "dist",
         "README.md",
-        "LICENSE"
+        "LICENSE",
+        "CHANGELOG.md"
     ],
     "scripts": {
         "dev": "chokidar 'lib/*' -c 'npm run build'",
