--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -11,5 +11,5 @@
         "resolveJsonModule": true
     },
     "include": ["lib/**/*.ts"],
-    "exclude": ["node_modules", "dist"]
+    "exclude": ["node_modules"]
 }
