--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "@semantic-release/changelog": "6.0.3",
         "@types/commander": "2.12.5",
         "@types/glob": "8.1.0",
+        "@types/jest": "^29.5.14",
         "@types/node": "20.11.27",
         "chokidar-cli": "3.0.0",
         "copyfiles": "2.4.1",
@@ -72,6 +73,7 @@
         "prettier": "3.3.3",
         "rimraf": "6.0.1",
         "semantic-release": "24.2.0",
+        "ts-jest": "^29.2.5",
         "typescript": "5.7.2",
         "uglify-js": "3.19.3",
         "vite": "6.0.3"
