--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -1,15 +1,9 @@
 {
+    "extends": "./tsconfig.base.json",
     "compilerOptions": {
-        "target": "ES2020",
         "module": "CommonJS",
-        "declaration": true,
-        "outDir": "dist/cjs",
-        "rootDir": "lib",
-        "strict": true,
-        "esModuleInterop": true,
-        "skipLibCheck": true,
-        "resolveJsonModule": true
+        "outDir": "./dist/cjs"
     },
     "include": ["lib/**/*.ts"],
-    "exclude": ["node_modules"]
+    "exclude": ["node_modules", "dist"]
 }
