--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -1,15 +1,8 @@
 {
+    "extends": "./tsconfig.base.json",
     "compilerOptions": {
-        "target": "ES2020",
-        "module": "ES2020",
-        "moduleResolution": "node",
-        "declaration": true,
-        "outDir": "dist/esm",
-        "rootDir": "lib",
-        "strict": true,
-        "esModuleInterop": true,
-        "skipLibCheck": true,
-        "resolveJsonModule": true
+        "module": "ESNext",
+        "outDir": "./dist/esm"
     },
     "include": ["lib/**/*.ts"],
     "exclude": ["node_modules", "dist"]
